[ios] Fix height issue when TableViewUrlCell doesn't have title or host.

- Require minimum height equal the height of the favicon for the vertical stackview in TableViewUrlCell
- If title and host aren't available, use full url spec.

Screenshot: https://drive.google.com/file/d/1C19zooJG80phfS6gDiCnMZQa2NZJd9zA/view?usp=sharing

Bug: 878833
Change-Id: I11e91f583f014f88a208478bef767cb70972ce7b
Reviewed-on: https://chromium-review.googlesource.com/1235319
Commit-Queue: Chris Lu <thegreenfrog@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#593303}(cherry picked from commit b4dd5ada594561eab58a59fb129ca070bae0ea7a [formerly 1fa2688ab8d8e8dca70a6417dfc2eaa84be9efd1])
Reviewed-on: https://chromium-review.googlesource.com/c/1258621
Reviewed-by: Chris Lu <thegreenfrog@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#835}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 764c1291e5b904276d981dab5c80fbc60b96857b